--- a/amazon.html
+++ b/amazon.html
@@ -88,7 +88,7 @@
           <div class="processBox">
             <div class="boxTitle">04 서비스 개발</div>
             <div class="boxImg">
-              <img src="./img_amazon/processItem4.png" alt="processItem4" />
+              <img src="./img_amazon/ee444.png" alt="processItem4" />
             </div>
             <div class="boxText">
               <div>HTML CSS JAVA SCRIPT</div>
