--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="infoContents">
               <a class="proIgm" href="./amazon.html">
-                <img src="./img_amazon/interface.png" alt="ex" />
+                <img src="./img_amazon/some.png" alt="Image0001" />
               </a>
               <div class="proDesc">
                 <div class="proName">Amazon kr</div>
@@ -131,7 +131,7 @@
             </div>
             <div class="infoContents">
               <a class="proIgm" href="./threads.html">
-                <img src="./img/1.jpg" alt="ex" />
+                <img src="./img/ui_17.png" alt="ui_17" />
               </a>
               <div class="proDesc">
                 <div class="proName">Threads</div>
