--- a/threads.html
+++ b/threads.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- gf -->
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_back"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
     />
@@ -13,6 +17,9 @@
     <title>Document</title>
   </head>
   <body>
+    <a id="backBtn" href="./index.html">
+      <span class="material-symbols-outlined"> arrow_back </span>
+    </a>
     <main id="innerWrapp">
       <section id="Intro">
         <div class="introImg">
@@ -296,6 +303,244 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="bill">
+        <img src="./img_Threads/bill.png" alt="bill" />
+      </section>
+      <section id="ia">
+        <div class="pageTitle">IA</div>
+        <div>
+          <img src="./img_Threads/ia.png" alt="ia" />
+        </div>
+      </section>
+      <section id="styleguide">
+        <div class="topwrapp">
+          <div class="logowrapp">
+            <div class="logoTitle">Logo</div>
+            <div class="logoArea">
+              <img src="./img_Threads/sg.png" alt="sg" />
+            </div>
+          </div>
+          <div class="colorWrapp">
+            <div class="colorTitle">Color</div>
+            <div class="colors">
+              <div class="color">
+                <div class="code">#FAFAFA</div>
+                <div class="rgb">RGB(250, 250, 250)</div>
+              </div>
+              <div class="color">
+                <div class="code">#F3F5F7</div>
+                <div class="rgb">RGB(243, 245, 247)</div>
+              </div>
+              <div class="color">
+                <div class="code">#E9E9E9</div>
+                <div class="rgb">RGB(233, 233, 233)</div>
+              </div>
+              <div class="color">
+                <div class="code">#D2D3D3</div>
+                <div class="rgb">RGB(210, 211, 211)</div>
+              </div>
+              <div class="color">
+                <div class="code">#BABABA</div>
+                <div class="rgb">RGB(186, 186, 186)</div>
+              </div>
+              <div class="color">
+                <div class="code">#4D4D4D</div>
+                <div class="rgb">RGB(77, 77, 77)</div>
+              </div>
+              <div class="color">
+                <div class="code">#181818</div>
+                <div class="rgb">RGB(24, 24, 24)</div>
+              </div>
+              <div class="color">
+                <div class="code">#000000</div>
+                <div class="rgb">RGB(0, 0, 0)</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="typoWrapp">
+          <div class="typoTitle">Typography</div>
+          <div class="extxtWrapp">
+            <div class="extxt">
+              ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghi <br />jklmnopqrstuvwxyz
+            </div>
+            <div class="extxtko">
+              ‘Beauty is in the eye of the beholder.’ 사랑하는 사람은 뭐든지 다
+              예뻐 보인다는 말인데, <br />마케팅에서 성공한 디자인은 다 예뻐
+              보이는 법이지. 폴 랜드(Paul Rand)
+            </div>
+          </div>
+          <div class="fontWrapp">
+            <div class="leftfont">
+              <div class="bigfont">Pretendard</div>
+              <div class="subfont">Pretendard</div>
+            </div>
+            <div class="rightfont">
+              <div>Bold</div>
+              <div>SemiBold</div>
+              <div>Medium</div>
+              <div>Regular</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="wf">
+        <img src="./img_Threads/wf.png" alt="wf" />
+      </section>
+      <section id="ui">
+        <div class="pageTitle">User Interface</div>
+        <div class="onbording">
+          <div class="textWrapp">
+            <div class="maintxt">
+              스레드 전용 회원가입을 통해 <br />
+              인스타그램 계정없이도 이용할 수 있어요.
+            </div>
+            <div class="subtxt">
+              Thread-only membership <br />You can use it without an Instagram
+              account.
+            </div>
+          </div>
+          <div class="onbordingImg">
+            <img src="./img_Threads/ui_1.png" alt="ui_1" />
+          </div>
+        </div>
+        <div class="newfunction">
+          <div class="functionWrapp">
+            <div>
+              <img src="./img_Threads/ui_2.png" alt="ui_2" />
+            </div>
+            <div class="textWrapp">
+              <div class="maintxt">
+                사용자의 자유성을 높이고 독립적인 <br />
+                SNS서비스를 제공합니다.
+              </div>
+              <div class="subtxt">
+                Increase user freedom and become independent <br />We provide
+                SNS services.
+              </div>
+            </div>
+          </div>
+          <div class="functionWrapp">
+            <div>
+              <img src="./img_Threads/ui_3.png" alt="ui_3" />
+            </div>
+            <div>
+              <img src="./img_Threads/ui_4.png" alt="ui_4" />
+            </div>
+          </div>
+        </div>
+        <div class="mainImg">
+          <img src="./img_Threads/ui_5.png" alt="ui_5" />
+        </div>
+        <div class="Modifying">
+          <div class="modiwrapp">
+            <div>
+              <img src="./img_Threads/ui_6.png" alt="ui_6" />
+            </div>
+            <div class="modidesc">
+              <div class="textWrapp">
+                <div class="maintxt">
+                  내소식을 보여주고싶은 사람을 <br />
+                  설정해서 게시물을 노출할 수 있어요.
+                </div>
+                <div class="subtxt">
+                  I'll set up a person who wants to show my news <br />You can
+                  expose the posts.
+                </div>
+              </div>
+              <div>
+                <img src="./img_Threads/ui_8.png" alt="ui_8" />
+              </div>
+            </div>
+          </div>
+          <div class="modiwrapp">
+            <div>
+              <img src="./img_Threads/ui_7.png" alt="ui_7" />
+            </div>
+          </div>
+        </div>
+        <div class="activity">
+          <div class="textWrapp">
+            <div class="maintxt">
+              활동 페이지에서 팔로워와 <br />내 활동을 관리하세요.
+            </div>
+            <div class="subtxt">
+              On the activity page, follower and <br />Take care of my
+              activities.
+            </div>
+          </div>
+          <div>
+            <img src="./img_Threads/ui_9.png" alt="ui_9" />
+          </div>
+        </div>
+        <div class="myPage">
+          <div>
+            <img src="./img_Threads/ui_10.png" alt="ui_10" />
+          </div>
+          <div class="textWrapp">
+            <div class="maintxt">
+              마이 프로필 페이지에서 내가 <br />업로드한 컨텐츠를 한번에
+              확인하세요.
+            </div>
+            <div class="subtxt">
+              The content that I uploaded Check it out at once.
+            </div>
+          </div>
+        </div>
+        <div class="myPageImg">
+          <img src="./img_Threads/ui_11.png" alt="ui_11" />
+        </div>
+        <div class="pin">
+          <div class="textWrapp">
+            <div class="maintxt">
+              여러개의 페이지를 모두 펼쳐 보면서 즐겨보세요.
+            </div>
+            <div class="subtxt">Enjoy it while opening up all the pages.</div>
+          </div>
+          <div class="pinContents">
+            <div>
+              데스크 탑 사용시 핀 아이콘을 눌러 원하는 페이지를 화면에 올릴 수
+              있습니다.
+            </div>
+            <img src="./img_Threads/ui_12.png" alt="ui_12" />
+          </div>
+          <img src="./img_Threads/ui_13.png" alt="ui_13" />
+        </div>
+        <div class="dark">
+          <div class="darkContents">
+            <div>
+              <img src="./img_Threads/ui_14.png" alt="ui_14" />
+            </div>
+            <div class="darkDesc">
+              <div class="textWrapp">
+                <div class="maintxt">
+                  다크 / 라이트 모드를 사용해 <br />
+                  원하는 모드로 빠르게 바꿔 사용하세요.
+                </div>
+                <div class="subtxt">
+                  Use dark/light mode Quickly switch to the mode you want on
+                  your desktop.
+                </div>
+              </div>
+              <div class="darkImg">
+                <img src="./img_Threads/ui_18.png" alt="ui_18" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./img_Threads/ui_17.png" alt="ui_17" />
+          </div>
+        </div>
+      </section>
+      <section id="footer">
+        <div class="footerInfo">프로젝트 명 : SNS 스레드</div>
+        <div class="footerInfo">프로젝트 기간 : 2024.09 ~ 2024.10</div>
+        <div class="footerInfo">프로젝트 규모 : 6인 팀프로젝트</div>
+        <div class="footerInfo">
+          프로젝트 담당 : 프로젝트 PM , 메인페이지 웹, 반응형페이지 디자인,
+          퍼블리싱 및 전반적 디자인 검수
         </div>
       </section>
     </main>
